--- a/index.html
+++ b/index.html
@@ -1577,7 +1577,7 @@
             <div class="about-grid">
                 <div class="about-image-wrapper">
                     <div class="about-main-image">
-                        <img src="images/driver.jpg" alt="Sisira Shantha - Local Tour Guide" onerror="this.src='https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=600'">
+                        <img src="images/driver.png" alt="Sisira Shantha - Local Tour Guide" onerror="this.src='https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=600'">
                     </div>
                     <div class="experience-badge">
                         <h3>10+</h3>
@@ -1837,7 +1837,7 @@
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="images/driver.jpg" alt="Your Guide Sisira" onerror="this.src='https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=500'">
+                    <img src="images/driver.png" alt="Your Guide Sisira" onerror="this.src='https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=500'">
                     <div class="gallery-overlay">
                         <h3>Your Guide</h3>
                         <p>Sisira Shantha</p>
