remove zoom issue

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="description" content="Sisira Tours Sri Lanka - Explore the Pearl of the Indian Ocean with experienced local driver Sisira Shantha. Comfortable Wagon R tours across Sri Lanka's most beautiful destinations.">
     <meta name="keywords" content="Sri Lanka tours, Wagon R hire, Sri Lanka driver, local tour guide, Colombo tours, cultural tours Sri Lanka, Sisira Tours">
     <meta name="author" content="Sisira Shantha">
