--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <meta name="robots" content="index, follow">
     
     <title>Sisira Tours Sri Lanka | Expert Local Driver & Tour Guide</title>
+
+    <meta name="description" content="Personal tourist guide services in Sri Lanka. Explore Colombo, Galle, Kandy with a local guide. Book direct.">
+<meta name="keywords" content="Sri Lanka tour, tourist guide, Colombo guide, Galle guide, Kandy tour">
     
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&family=Cormorant:wght@600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
